# VlcRecordPlayer

./: .gitignore  README.md  build.gradle  config.gradle  gradle.properties  settings.gradle  versions.gradle
app/: build.gradle  proguard-rules.pro
app/libs/: zml_release.aar
app/release/: output-metadata.json
app/src/main/: AndroidManifest.xml
app/src/main/res/drawable/: bg_controller_button.xml  bg_controller_gradient_bottom.xml  bg_controller_gradient_top.xml  corner_gray.xml  ic_player_brightness.xml  ic_player_fullscreen.xml  ic_player_fullscreen_exit.xml  ic_player_have_no_voice.xml  ic_player_have_voice.xml  ic_player_lock.xml  ic_player_mic.xml  ic_player_mic_off.xml  ic_player_pause.xml  ic_player_play.xml  ic_player_play_large.xml  ic_player_record.xml  ic_player_record_active.xml  ic_player_snapshot.xml  ic_player_unlock.xml  ic_player_volume_off.xml  progress_gesture.xml  seekbar_progress.xml  seekbar_thumb.xml  selector_goto_pictures.xml  selector_item_ffffff.xml  selector_url_type.xml  shape_btn_gradient_blue.xml  shape_btn_gradient_green.xml  shape_btn_gradient_orange.xml  shape_btn_gradient_pink.xml  shape_btn_gradient_purple.xml  shape_btn_gradient_red.xml  shape_btn_gradient_teal.xml  (+5 more)
gradle/wrapper/: gradle-wrapper.properties
libvlc/: CMakeLists.txt  build.gradle  local.properties
libvlc/src/main/cpp/: yyl_record.c
libvlc/src/main/java/com/vlc/lib/: RecordEvent.java  VlcPlayer.java  VlcVideoView.java
libvlc/src/main/java/com/vlc/lib/listener/: MediaListenerEvent.java
libvlc/src/main/java/com/vlc/lib/listener/util/: LogUtils.java
(+89 files in other folders)
